<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_regular"
    android:paddingRight="@dimen/margin_regular"
    android:paddingTop="@dimen/margin_regular"
    android:background="@color/colorWhite">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_heavy"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:src="@drawable/ic_server"
            android:alpha="0.5"
            android:scaleType="fitCenter"/>
        <EditText
            android:id="@+id/inputTitle"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/font_regular"
            android:inputType="textUri"
            android:hint="@string/hint_input_server_title"
            tools:ignore="Autofill" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:alpha="0.5"
            android:src="@drawable/ic_guide"
            android:scaleType="fitCenter"/>
        <EditText
            android:id="@+id/inputServer"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/font_regular"
            android:inputType="textUri"
            android:hint="@string/hint_input_server_path"
            tools:ignore="Autofill" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/areaID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:alpha="0.5"
            android:src="@drawable/ic_user"
            android:scaleType="fitCenter"/>
        <EditText
            android:id="@+id/inputID"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/font_regular"
            android:inputType="text"
            android:hint="@string/hint_input_id"
            tools:ignore="Autofill" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/areaPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:alpha="0.5"
            android:src="@drawable/ic_key"
            android:scaleType="fitCenter"/>
        <EditText
            android:id="@+id/inputPW"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/font_regular"
            android:inputType="textPassword"
            android:hint="@string/hint_input_pw"
            tools:ignore="Autofill" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnInit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/colorAccent">
        <TextView
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            style="@style/font_medium"
            android:text="@string/page_setup_init"
            android:textColor="@color/colorWhite"
            />
        <ImageView
            android:layout_margin="@dimen/margin_regular"
            android:layout_width="@dimen/icon_heavy"
            android:layout_height="@dimen/icon_heavy"
            android:src="@drawable/ic_server"
            android:tint="@color/colorWhite"
            android:scaleType="fitCenter"
            />
    </LinearLayout>
</LinearLayout>