<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_heavy"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:src="@drawable/ic_server"
            android:alpha="0.5"
            android:scaleType="fitCenter"/>
        <EditText
            android:id="@+id/inputTitle"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/font_regular"
            android:inputType="textUri"
            android:hint="@string/hint_input_server_title"
            tools:ignore="Autofill" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:alpha="0.5"
            android:src="@drawable/ic_guide"
            android:scaleType="fitCenter"/>
        <EditText
            android:id="@+id/inputServer"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/font_regular"
            android:inputType="textUri"
            android:hint="@string/hint_input_server_path"
            tools:ignore="Autofill" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/areaID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:alpha="0.5"
            android:src="@drawable/ic_user"
            android:scaleType="fitCenter"/>
        <EditText
            android:id="@+id/inputID"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/font_regular"
            android:inputType="text"
            android:hint="@string/hint_input_id"
            tools:ignore="Autofill" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/areaPW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:alpha="0.5"
            android:src="@drawable/ic_key"
            android:scaleType="fitCenter"/>
        <EditText
            android:id="@+id/inputPW"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/font_regular"
            android:inputType="textPassword"
            android:hint="@string/hint_input_pw"
            tools:ignore="Autofill" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_regular"
        android:gravity="right"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnModify"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:tint="@color/colorPrimaryDark"
            android:src="@drawable/ic_lock"
            android:scaleType="fitCenter"
            android:background="@color/transparent"
            />
        <ImageButton
            android:id="@+id/btnHome"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:tint="@color/colorPrimaryDark"
            android:src="@drawable/ic_home"
            android:scaleType="fitCenter"
            android:background="@color/transparent"
            />
        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:tint="@color/colorPrimaryDark"
            android:background="@color/transparent"
            android:src="@drawable/ic_delete"
            android:scaleType="fitCenter"
            />
        <ImageButton
            android:id="@+id/btnRefresh"
            android:layout_marginLeft="@dimen/margin_regular"
            android:layout_width="@dimen/icon_regular"
            android:layout_height="@dimen/icon_regular"
            android:tint="@color/colorPrimaryDark"
            android:background="@color/transparent"
            android:src="@drawable/ic_refresh"
            android:scaleType="fitCenter"
            />



    </LinearLayout>

</LinearLayout>